Fix text-alignment for image captions

--- a/tinymce/media/tiny_mce/themes/advanced/skins/o2k7/content.css
+++ b/tinymce/media/tiny_mce/themes/advanced/skins/o2k7/content.css
@@ -19,10 +19,10 @@ del {color:red; text-decoration:line-through}
 cite {border-bottom:1px dashed blue}
 acronym {border-bottom:1px dotted #CCC; cursor:help}
 abbr {border-bottom:1px dashed #CCC; cursor:help}
-q.image-caption {position:relative; display:block; float:none; font-weight:bold; font-size:11px;}
+q.image-caption {position:relative; display:block; float:none; font-weight:bold; font-size:11px; text-align:left;}
 blockquote:before, blockquote:after, q:before, q:after {content:none;}
 blockquote, q {quotes:none;}
-span.photo_caption_block {overflow:visible;}
+span.photo_caption_block {overflow:visible; display:inline-block;}
 
 /* IE */
 * html body {
